<resources>
    <string name="app_name">ServerDemo</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_search_book">搜书</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
