<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".me.ui.register.RegisterActivity">

    <EditText
        android:id="@+id/register_username_atv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_phone"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPhonetic"
        android:maxLines="1"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/register_bt"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold" />
</LinearLayout>